--- a/css/style.css
+++ b/css/style.css
@@ -32,11 +32,27 @@ header {
     width: 100%;
     height: 40px;
     background-color: #0092AF;
-    text-align: left;
-
+    text-align: center;
 	padding-left: 5px;
 	color: #FFFDF7;
 	box-shadow: 0px 3px 10px #393A3D;	
+}
+#head a{
+	margin-top: 2.5px;
+	display:inline-block;
+	text-decoration: none;
+	padding:7px 15px;
+	border:solid 2px #004452;
+	border-radius: 10px;
+	background-color: #393A3D;
+	color: #FFFDF7;
+	
+}
+
+#head a:hover {
+	background-color: rgba(57,58,61,0.30);
+	
+	
 }
 
 /*Setting basic layout for the parent container of the top intro*/
@@ -93,13 +109,23 @@ footer {
 .tile div {
 	
 }
-.tile a {
+.tile a{
 	text-decoration: none;
 	position: absolute;
     bottom: 0;
 	left: 50%;
     transform: translateX(-50%);
-	margin-bottom: 5px;
+	padding: 4px 8px;
+	margin-bottom: 8px;
+	border: solid 2px black;
+	background-color: #0092AF;
+	border-radius: 10px;
+}
+.tile a:link,a:visited{
+	color:black;
+}
+.tile a:hover {
+	background-color: rgba(0,146,175,0.30);
 }
 
 /* Small Tablets */
