--- a/css/style.css
+++ b/css/style.css
@@ -106,20 +106,21 @@ footer {
 	border-radius: 15px;
 	
 }
-.tile div {
-	
+.tile p {
+	display: block;
 }
 .tile a{
-	text-decoration: none;
-	position: absolute;
+    text-decoration: none;
+    position: absolute;
     bottom: 0;
-	left: 50%;
+    left: 50%;
     transform: translateX(-50%);
-	padding: 4px 8px;
-	margin-bottom: 8px;
-	border: solid 2px black;
-	background-color: #0092AF;
-	border-radius: 10px;
+    padding: 4px 8px;
+    margin-bottom: 4px;
+    border: solid 2px black;
+    background-color: #0092AF;
+    border-radius: 10px;
+    margin-top: 55px;
 }
 .tile a:link,a:visited{
 	color:black;
@@ -154,6 +155,12 @@ footer {
 	
 }
 @media (min-width: 551px){
+	
+	#head a {
+		margin-left: 20px;
+		margin-right: 20px;
+/*		padding:7px 20px;*/
+	}
 .subjectCard {
 	 max-width: 850px;
 	margin-left: auto;
