--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ header {
 	color: #FFFDF7;
 	box-shadow: 0px 3px 10px #393A3D;	
 }
+/*Adjusting link styls for top navigation. Adding borders background and some transparancy on hover*/
 #head a{
 	margin-top: 2.5px;
 	display:inline-block;
@@ -83,6 +84,7 @@ footer {
 	padding-bottom: 15px;
 	color: #FFFDF7;
 }
+/*the tile class is used for the bottom subject groups. keeping the size smaller and keeping the picture on top*/
 .tile {
 	background: #EDEBE3;
     padding-top: 20px;
@@ -107,6 +109,7 @@ footer {
 .tile p {
 	display: block;
 }
+/*using absolute positioning to keep the link at the bottom of the tile and setting hover styling*/
 .tile a{
     text-decoration: none;
     position: absolute;
@@ -120,6 +123,7 @@ footer {
     border-radius: 10px;
     margin-top: 55px;
 }
+
 .tile a:link,a:visited{
 	color:black;
 }
@@ -131,6 +135,8 @@ footer {
 	display:block;
 	margin: 10px 0px;
 	}
+
+/*styling for the javascript to make the magic 8ball. */
 .js8Ball {
 background: black;	
 border-radius: 50%;
